RESOLVED FIXED264800
mask-mode breaks mask-size
https://bugs.webkit.org/show_bug.cgi?id=264800
Summary mask-mode breaks mask-size
Alex
Reported 2023-11-14 00:53:52 PST
When I switch mask-mode to luminance my mask-size: contain no longer works: https://codepen.io/waterplea/pen/ExrvOWK
Attachments
Test (324 bytes, text/html)
2024-03-16 05:01 PDT, Antoine Quint
no flags
Radar WebKit Bug Importer
Comment 1 2023-11-14 08:36:35 PST
Antoine Quint
Comment 2 2024-03-16 05:01:22 PDT
Antoine Quint
Comment 3 2024-03-16 14:51:35 PDT
The call to `context.setDrawLuminanceMask(bgLayer.maskMode() == MaskMode::Luminance)` in `BackgroundPainter::paintFillLayer()` causes the sizing issue. Will have to debug what goes on in the GraphicsContext when `BackgroundPainter::drawLuminanceMask()` return true.
Antoine Quint
Comment 4 2024-03-16 14:56:09 PDT
The functions where `BackgroundPainter::drawLuminanceMask()` is involved in this case are `Image::drawTiled()` and `BitmapImage::drawPattern()`.
Antoine Quint
Comment 5 2024-05-22 09:20:12 PDT
The parameters we receive in GraphicsContextCG::drawPattern() look correct.
Antoine Quint
Comment 6 2024-05-22 09:21:28 PDT
This appears to work as expected on a 1x display.
Antoine Quint
Comment 7 2024-05-22 09:29:59 PDT
Actually, zooming in and out of the page using the trackpad affects the way the mask is clipped.
Antoine Quint
Comment 8 2024-05-22 09:53:57 PDT
Actually, the trackpad zoom affecting the rendering only affects ToT and not macOS 14.5. So that's a change in behavior introduced since then which can be bisected.
Antoine Quint
Comment 9 2024-05-22 10:44:33 PDT
The trackpad zoom behavior was caused by 276827@main.
Antoine Quint
Comment 10 2024-05-24 07:51:13 PDT
Antoine Quint
Comment 11 2024-05-24 07:53:49 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/46478
EWS
Comment 12 2024-05-25 00:09:04 PDT
Committed 279312@main (2e41b0f5e31e): <https://commits.webkit.org/279312@main> Reviewed commits have been landed. Closing PR #29053 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.