mask-mode breaks mask-size https://bugs.webkit.org/show_bug.cgi?id=264800 rdar://118396665

Reviewed by Simon Fraser.

In `BitmapImage::drawPattern()`, we should be using `createImageBuffer()` instead of `createAlignedImageBuffer()`
since we create the temporary `ImageBuffer` to work on the pixels of the image and, as such, should not be scaled
to match the `GraphicsContext` resolution.

We should use the `ImageBuffer` rect instead of tileRect when drawing to or from the `ImageBuffer` since the `tileRect`
is in the destination `GraphicsContext` coordinates.

Patch logic by Said Abou-Hallawa, refactoring and test by Antoine Quint.

* LayoutTests/imported/w3c/web-platform-tests/css/css-masking/mask-image/mask-mode-luminance-with-mask-size-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-masking/mask-image/mask-mode-luminance-with-mask-size-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-masking/mask-image/mask-mode-luminance-with-mask-size.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::drawPattern):
(WebCore::BitmapImage::drawLuminanceMaskPattern):
* Source/WebCore/platform/graphics/BitmapImage.h:

Canonical link: https://commits.webkit.org/279312@main